--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
     <style>
-
+      *{
+        margin: 0;
+        padding: 0;
+      }
     </style>
   </head>
   <body>
     <div id="root"></div>
-    <script src="./DEV.js"></script>
-    <script src="./buttons.js"></script>
+
     </body>
 </html>
 
